# Motif

./: check_data.py  enrich_movies.py  enriched_movies.db  motif_assets.db  motif_mvp_100_local.csv  pyproject.toml  query_cache.json
backend/: engine.py  fakemain.py  gatekeeper.py  generation_layer.py  generation_layer_v2.py  generator.py  hydrate_ratings.py  main.py  motif_assets.db  motif_assets_OLD.db  motif_master_data_100.csv  query_cache.json
backend/data/: motif_mvp_100_CHECKPOINT.csv
backend/scripts/: batch_loader.py  construct_rag.py  db.py  enrich_data_100.py  enrich_logic.py  enrich_movies_100.py  enrich_movies_5000.py  gatekeeper.py  generator.py  ingest.py  patch_characters.py  utils.py
backend_old/: main.py  search_app.py
backend_old/data/: motif_final_rag.csv  motif_master_data_100.csv
backend_old/data/OLD_V2/: motif_final_rag.csv
backend_old/scripts/: ingest.py
frontend/: package.json  pnpm-lock.yaml  svelte.config.js
frontend/src/lib/: constants.js  db.ts  firebase.ts  logic.ts  stores.ts
frontend/src/lib/components/auth/: LoginModal.svelte
frontend/src/routes/: +layout.svelte  +page.svelte
frontend/src/routes/discovery/: +page.svelte
frontend/src/routes/profile/: +page.svelte
frontend/src/routes/settings/: +page.svelte
stash/: generation_layer_v1.py
stash/backend_old/data/: database_schema.sql  motif_assets.db
stash/backend_old/data/OLD_V2/: motif_assets.db  motif_master_data_100.csv
stash/backend_old/sanity/: check_data.py
stash/backend_old/scripts/: construct_rag.py  enrich_data_100.py
(+4 files in other folders)
